[tool.poetry]
name = "pdf-utilities"
version = "0.1.0"
description = "Lots of useful tools to handle PDF files"
authors = ["Pietro Bianco"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
PyPDF2 = "^3.0.1"
tqdm = "^4.66.4"
"pdfminer.six" = "^20231228"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
